--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=audit
-spring.datasource.url= jdbc:mysql://localhost:3307/audit?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/audit?useSSL=false
 spring.datasource.username= root
 spring.datasource.password=
 server.port= 8480
@@ -13,3 +13,13 @@ gflotte.app.jwtSecret= ======================gflotte=gestion====================
 gflotte.app.jwtExpirationMs=86400000
 
 
+# Configuration for sending emails with Mailtrap
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=7081b62ad3a1b2
+spring.mail.password=aa0e31429c421d
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
